# OpenCFD-AMR

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-chem.yml  build.yaml  cmake-single-platform.yml
Exec/: Make.EBR  draw.ipynb
Exec/0_SOD/: inputs  prob.H  prob.cpp  prob_bcfill.cpp  prob_parm.H
Exec/0_Sod/: CMakeLists.txt  GNUmakefile  Make.package  ebr_bcfill.cpp  ebr_prob.H  ebr_prob.cpp  ebr_prob_parm.cpp  inputs  prob_bcfill.cpp
Exec/10_TEST/: inputs
Exec/1_DMR/: CMakeLists.txt  Make.package  bc_fill.F90  ebr_prob.H  ebr_prob.cpp  inputs  prob.H  prob.cpp  prob_bcfill.cpp  prob_parm.H  prob_parm.cpp  problem.F90
Exec/2_KH/: bc_fill.F90  inputs  problem.F90
Exec/2_PLANE/: inputs  prob.H  prob_bcfill.cpp
Exec/3_FSTEP/: inputs  prob.H  prob_bcfill.cpp
Exec/3_Jet/: bc_fill.F90  inputs  problem.F90
Exec/4_RT/: bc_fill.F90  inputs  problem.F90
Exec/4_WEDGE/: inputs  prob.H  prob.cpp  prob_parm.H
Exec/5_CHEMSOD/: inputs  prob.H  prob_parm.H
Exec/5_EB/: GNUmakefile  bc_fill.F90  inputs  problem.F90
Exec/6_0D/: CMakeLists.txt  inputs  prob.H  prob.cpp  prob_bcfill.cpp  prob_parm.H
Exec/6_GEOM/: GNUmakefile  bc_fill.F90  inputs  problem.F90
Exec/7_JET/: inputs  prob.H  prob.cpp  prob_bcfill.cpp  prob_parm.H  prob_parm.cpp
Exec/8_KH/: inputs  prob.H  prob.cpp  prob_parm.H
Exec/9_CHEMEB/: inputs  prob.H  prob_bcfill.cpp  prob_parm.H
Exec/Corner/: inputs  prob_bcfill.cpp  prob_parm.H
Exec/SLT/: inputs  new-ty.stl  prob.cpp  prob_parm.H
Exec/Wing/: 30P30N.stl  inputs  prob.H  prob.cpp  prob_bcfill.cpp  prob_parm.H  prob_parm.cpp
Source/: Advance.cpp  CMakeLists.txt  Constants.H  Constants.cpp  EBR.H  EBR.cpp  EBR_advance.cpp  EBR_geom.cpp  EBR_parm.H  EBR_parm.cpp  EBR_setup.cpp  EBR_tagging.H  EBR_tagging.cpp  Geometry.cpp  IO.cpp  IndexDefines.H  LevelBld.cpp  Make.package  Setup.cpp  Tagging.H  Tagging.cpp  main.cpp
Source/CHEM/: CHEM_advance.cpp  CHEM_viscous.H  CHEMkernels.H  CMakeLists.txt  ChemAdvance.cpp  ChemViscous.H  FlowAdvance.cpp  FlowAdvanceBox.cpp  Flow_advance.cpp  LiDryer.H  Transport.cpp  test.cpp
Source/EB/: AdvanceBox.cpp  CMakeLists.txt  EBdiffusion.H  EBkernels.H
Source/kernel/: CMakeLists.txt  Diffusion.H  FluxSplit.H  Kernels.H  Make.package  Reconstruction.H  kernels.H  nc_ibm.F90
Test/: DNN_test.cpp  H2-LiDryer.yaml  chemical_test.cpp  transport_test.cpp
Util/: GNUmakefile
Util/CMake/: SetAMReXOptions.cmake  SetRpath.cmake
Util/Plotfile/: GNUmakefile
